--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                             <button class="btn btn-warning col-3" onclick="setOperation('+')">+</button>
                         </div>
                         <div class="row">
-                            <button class="btn btn-success col-12 mt-3" onclick="calculate()">=</button>
+                            <button class="btn btn-secondary col-3" onclick="appendNumber('(')">(</button>
+                            <button class="btn btn-secondary col-3" onclick="appendNumber(')')">)</button>
+                            <button class="btn btn-success col-6" onclick="calculate()">=</button>
                         </div>
                     </div>
                 </div>
